RESOLVED FIXED58261
REGRESSION (r77385): Rendering issue on marketwatch.com
https://bugs.webkit.org/show_bug.cgi?id=58261
Summary REGRESSION (r77385): Rendering issue on marketwatch.com
Dave Hyatt
Reported 2011-04-11 13:16:46 PDT
Steps to reproduce: 1. Load www.marketwatch.com 2. After the page loads, scroll to the bottom of the page 3. Note that at the end of the content is a large blank footer area 4. See screenshot Not reproducible in Safari on 10.6.6 or in Firefox on 11A379a.
Attachments
Test case (340 bytes, text/html)
2011-04-11 13:21 PDT, Dave Hyatt
no flags
Patch (20.80 KB, patch)
2011-04-11 15:14 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2011-04-11 13:17:03 PDT
Dave Hyatt
Comment 2 2011-04-11 13:21:16 PDT
Created attachment 89067 [details] Test case
Dave Hyatt
Comment 3 2011-04-11 15:14:08 PDT
Dave Hyatt
Comment 4 2011-04-11 15:16:16 PDT
Fixed in r83514.
Andy Estes
Comment 5 2011-04-11 15:24:30 PDT
mitz
Comment 6 2011-04-17 12:19:27 PDT
This broke fast/repaint/trailing-floats-root-line-box-overflow.html!
Note You need to log in before you can comment on or make changes to this bug.