https://bugs.webkit.org/show_bug.cgi?id=58261

Reviewed by Dan Bernstein.

Fix for layout regression on marketwatch.com. When I converted TrailingFloatsRootInlineBox over
to the new overflow model, I messed up the math and passed a bottom value where I should have
passed a height value. This patch fixes the code to be logically equivalent to the way it
was prior to my changes.

Source/WebCore:

Added fast/overflow/trailing-float-linebox.html.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutInlineChildren):

LayoutTests:

* fast/overflow/trailing-float-linebox.html: Added.
* platform/mac/fast/overflow/trailing-float-linebox-expected.checksum: Added.
* platform/mac/fast/overflow/trailing-float-linebox-expected.png: Added.
* platform/mac/fast/overflow/trailing-float-linebox-expected.txt: Added.



Canonical link: https://commits.webkit.org/73278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83514 268f45cc-cd09-0410-ab3c-d52691b4dbfc